add logo and nav bar

--- a/src/main/resources/templates/genre/genres.html
+++ b/src/main/resources/templates/genre/genres.html
@@ -3,6 +3,7 @@
 <head th:replace="fragments :: page_head('Genres - BookShop Admin')"/>
 <body>
 <div class="container-fluid">
+    <div th:replace="navigation :: menu"></div>
     <h2>Manage Genres</h2>
     <div class="full-details">
 
