Add footer and add book service test shouldThrowExceptionGetBookByTitlePublishedYearNotFound

--- a/src/main/resources/templates/genre/genres.html
+++ b/src/main/resources/templates/genre/genres.html
@@ -24,6 +24,7 @@
             </tr>
             </tbody>
         </table>
+        <div th:replace="fragments :: footer"></div>
     </div>
 </div>
 </body>
