--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -29,124 +29,7 @@
 <body>
 
 <div class="text-center m-3" th:fragment="footer">
-    <p>Shopme Control Panel - Copyright &copy; Shopme</p>
-</div>
-
-<th th:fragment="column_link(fieldName, columnLabel, removeTag)" th:remove="${removeTag}">
-    <a class="text-white"
-       th:href="@{${moduleURL} + '/page/' + ${currentPage} + '?sortField=' + ${fieldName}  +'&sortDir=' + ${sortField != fieldName ? sortDir : reverseSortDir} + ${keyword != null ? '&keyword=' + keyword : ''} + ${categoryId != null ? '&categoryId=' + categoryId : ''}}">
-        [[${columnLabel}]]
-    </a>
-    <span th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"
-          th:if="${sortField == fieldName}"></span>
-</th>
-
-<a class="page-link"
-   th:fragment="page_link(pageNum, label)"
-   th:href="@{${moduleURL} + '/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword=' + keyword : ''} + ${categoryId != null ? '&categoryId=' + categoryId : ''}}">[[${label}]]</a>
-
-<div th:fragment="user_photos" th:remove="tag">
-    <span class="fas fa-portrait fa-3x icon-silver" th:if="${user.photos == null}"></span>
-    <img style="width: 100px" th:if="${user.photos != null}"
-         th:src="@{${user.photosImagePath}}"/>
-</div>
-
-<div th:fragment="status(enabled, entityName, entityURL)" th:remove="tag">
-    <a class="fas fa-check-circle fa-2x icon-green" th:href="@{${entityURL} + '/enabled/false'}"
-       th:if="${enabled == true}"
-       th:title="'Disable this ' + ${entityName}"
-    ></a>
-
-    <a class="fas fa-circle fa-2x icon-dark" th:href="@{${entityURL} + '/enabled/true'}"
-       th:if="${enabled == false}"
-       th:title="'Enable this ' + ${entityName}"
-    ></a>
-</div>
-
-<div th:fragment="edit(entityName, editURL)" th:remove="tag">
-    <a class="fas fa-edit fa-2x icon-green" th:href="@{${editURL}}"
-       th:title="'Edit this ' + ${entityName}"></a>
-</div>
-
-<div th:fragment="delete(entityName, entityId, deleteURL, visible)" th:remove="tag">
-    <th:block th:if="${visible}">
-        <a class="fas fa-trash fa-2x icon-dark link-delete"
-           th:entityId="${entityId}"
-           th:href="@{${deleteURL}}"
-           th:title="'Delete this ' + ${entityName}"></a>
-    </th:block>
-</div>
-
-<div th:fragment="pagination(entityName)" th:remove="tag">
-    <div class="text-center m-1" th:if="${totalItems > 0}">
-        <span>Showing [[${entityName}]] # [[${startCount}]] to [[${endCount}]] of [[${totalItems}]]</span>
-    </div>
-    <div class="text-center m-1" th:unless="${totalItems > 0}">
-        <span>No [[${entityName}]] found</span>
-    </div>
-
-    <div th:if="${totalPages > 1}">
-        <nav>
-            <ul class="pagination justify-content-center flex-wrap">
-                <li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
-                    <a th:replace="fragments :: page_link(1, 'First')"></a>
-                </li>
-                <li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
-                    <a th:replace="fragments :: page_link(${currentPage - 1}, 'Previous')"></a>
-                </li>
-
-                <li th:class="${currentPage != i ? 'page-item': 'page-item active'}"
-                    th:each="i : ${#numbers.sequence(1, totalPages)}">
-                    <a th:replace="fragments :: page_link(${i}, ${i})"></a>
-                </li>
-
-                <li th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
-                    <a th:replace="fragments :: page_link(${currentPage + 1}, 'Next')"></a>
-                </li>
-
-                <li th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
-                    <a th:replace="fragments :: page_link(${totalPages}, 'Last')"></a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-</div>
-
-<div th:fragment="search_form_and_message()">
-    <form class="form-inline m-3" th:action="@{${moduleURL} + '/page/1'}">
-        <input name="sortField" th:value="${sortField}" type="hidden"/>
-        <input name="sortDir" th:value="${sortDir}" type="hidden"/>
-
-        Filter:&nbsp;
-        <input class="form-control" name="keyword" required th:value="${keyword}" type="search"/>
-        &nbsp;&nbsp;
-        <button class="btn btn-primary" type="submit">
-            <i class="fas fa-search"></i>
-        </button>
-        &nbsp;&nbsp;
-        <button class="btn btn-secondary" onclick="clearFilter()" type="button">
-            <i class="fas fa-eraser"></i>
-        </button>
-    </form>
-
-    <div class="alert alert-success text-center" th:if="${message != null}">
-        [[${message}]]
-    </div>
-</div>
-
-<div th:fragment="format_currency(amount)" th:remove="tag">
-    <span th:if="${CURRENCY_SYMBOL_POSITION == 'Before price'}" th:remove="tag">[[${CURRENCY_SYMBOL}]]</span>[[${#numbers.formatDecimal(amount,
-    1, THOUSANDS_POINT_TYPE, DECIMAL_DIGITS, DECIMAL_POINT_TYPE)}]]<span
-        th:if="${CURRENCY_SYMBOL_POSITION == 'After price'}" th:remove="tag">[[${CURRENCY_SYMBOL}]]</span>
-</div>
-
-<div th:fragment="format_time(dateTime)" th:remove="tag">
-    <span th:text="${#dates.format(dateTime, 'yyyy-MM-dd HH:mm:ss')}"></span>
-</div>
-
-<div th:fragment="currency_input(amount)" th:remove="tag">
-    <input class="form-control" readonly th:value="${(CURRENCY_SYMBOL_POSITION == 'Before price' ? CURRENCY_SYMBOL : '') + #numbers.formatDecimal(amount, 1, THOUSANDS_POINT_TYPE, DECIMAL_DIGITS, DECIMAL_POINT_TYPE) + (CURRENCY_SYMBOL_POSITION == 'After price' ? CURRENCY_SYMBOL : '')}"
-           type="text">
+    <p>Copyright &copy; Book store</p>
 </div>
 
 </body>
