--- a/src/main/resources/templates/genre/genre_form.html
+++ b/src/main/resources/templates/genre/genre_form.html
@@ -4,6 +4,7 @@
 <body>
 <div class="container-fluid">
     <h2>Create/Edit Genres</h2>
+    <div th:replace="fragments :: footer"></div>
 </div>
 </body>
 </html>
