Basic saving genre and custom error page

--- a/src/main/resources/templates/genre/genres.html
+++ b/src/main/resources/templates/genre/genres.html
@@ -5,6 +5,8 @@
 <div class="container-fluid">
     <div th:replace="navigation :: menu"></div>
     <h2>Manage Genres</h2>
+
+    <a th:href="@{/genres/new}" class="fas fa-folder-plus fa-2x icon-dark mr-2"></a>
     <div class="full-details">
 
         <table class="table table-bordered table-striped table-hover table-responsive-xl">
