--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -11,13 +11,18 @@
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css"
+          integrity="sha512-gMjQeDaELJ0ryCI+FtItusU9MkAifCZcGq789FrzkiM49D8lbDhoaUaIX4ASU187wofMNlgBJ4ckbrXM9sE6Pg=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <script crossorigin="anonymous"
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
             src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
-    <script crossorigin="anonymous"
-            integrity="sha256-T3bYsIPyOLpEfeZOX4M7J59ZoDMzuYFUsPiSN3Xcc2M=" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.4.1/cjs/popper.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.4.1/umd/popper.min.js"
+            integrity="sha512-ZQcoNCiLvJI1ssgag73XfljrJ8evpXZxvch4SMZs+GR1akH29gONGzXJ6+vYxULTygL35IlPomLGnTbz5rP0AA=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 
     <script crossorigin="anonymous"
