--- a/src/main/resources/templates/genre/genre_form.html
+++ b/src/main/resources/templates/genre/genre_form.html
@@ -1,9 +1,49 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments :: page_head('Genres - BookShop Admin')"/>
+<head th:replace="fragments :: page_head(${pageTitle})"/>
 <body>
 <div class="container-fluid">
-    <h2>Create/Edit Genres</h2>
+    <div>
+        <h2>Manage Genres | [[${pageTitle}]]</h2>
+    </div>
+
+    <form th:action="@{/genres/save}" method="post" style="max-width: 500px; margin: 0 auto"
+          enctype="multipart/form-data"
+          th:object="${genre}">
+        <input type="hidden" th:field="*{id}" />
+        <div class="border border-secondary rounded p-3">
+            <div class="form-group row">
+                <label class="col-sm-4 col-form-label">Name:</label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" th:field="*{name}" />
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label class="col-sm-4 col-form-label">Parent:</label>
+                <div class="col-sm-8">
+                    <select class="form-control" th:field="*{parent}">
+                        <option value="0">[No Parent]</option>
+
+                        <th:block th:each="gen : ${allGenres}">
+                            <option th:value="${gen.id}">[[${gen.name}]]</option>
+                        </th:block>
+
+                    </select>
+                </div>
+            </div>
+
+            <div class="text-center">
+                <input type="submit" value="Save" class="btn btn-primary m-3" />
+                <input type="button" value="Cancel" class="btn btn-secondary" id="buttonCancel" />
+            </div>
+
+        </div>
+
+
+    </form>
+
+
     <div th:replace="fragments :: footer"></div>
 </div>
 </body>
