--- a/src/main/resources/templates/genre/genre_form.html
+++ b/src/main/resources/templates/genre/genre_form.html
@@ -16,6 +16,7 @@
                 <label class="col-sm-4 col-form-label">Name:</label>
                 <div class="col-sm-8">
                     <input type="text" class="form-control" th:field="*{name}" />
+                    <div class="alert alert-warning" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
                 </div>
             </div>
 
