--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -6,23 +6,24 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
     <meta content="width=device-width,initial-scale=1.0, minimum-scale=1.0" name="viewport">
 
-    <link rel="stylesheet" type="text/css" th:href="@{/style.css}" />
+    <link rel="stylesheet" th:href="@{/style.css}" type="text/css"/>
 
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css"
+    <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css"
           integrity="sha512-gMjQeDaELJ0ryCI+FtItusU9MkAifCZcGq789FrzkiM49D8lbDhoaUaIX4ASU187wofMNlgBJ4ckbrXM9sE6Pg=="
-          crossorigin="anonymous" referrerpolicy="no-referrer" />
+          referrerpolicy="no-referrer" rel="stylesheet"/>
 
     <script crossorigin="anonymous"
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
             src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.4.1/umd/popper.min.js"
+    <script crossorigin="anonymous"
             integrity="sha512-ZQcoNCiLvJI1ssgag73XfljrJ8evpXZxvch4SMZs+GR1akH29gONGzXJ6+vYxULTygL35IlPomLGnTbz5rP0AA=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+            referrerpolicy="no-referrer"
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.4.1/umd/popper.min.js"></script>
 
 
     <script crossorigin="anonymous"
@@ -32,6 +33,11 @@
 
 </head>
 <body>
+
+<div th:fragment="edit(entityName, editURL)" th:remove="tag">
+    <a class="fas fa-edit fa-2x icon-green" th:href="@{${editURL}}"
+       th:title="'Edit this ' + ${entityName}"></a>
+</div>
 
 <div class="text-center m-3" th:fragment="footer">
     <p>Copyright &copy; Book store</p>
