--- a/src/main/resources/templates/genre/genre_form.html
+++ b/src/main/resources/templates/genre/genre_form.html
@@ -3,20 +3,21 @@
 <head th:replace="fragments :: page_head(${pageTitle})"/>
 <body>
 <div class="container-fluid">
+    <div th:replace="navigation :: menu"></div>
     <div>
         <h2>Manage Genres | [[${pageTitle}]]</h2>
     </div>
 
-    <form th:action="@{/genres/save}" method="post" style="max-width: 500px; margin: 0 auto"
-          enctype="multipart/form-data"
+    <form enctype="multipart/form-data" method="post" style="max-width: 500px; margin: 0 auto"
+          th:action="@{/genres/save}"
           th:object="${genre}">
-        <input type="hidden" th:field="*{id}" />
+        <input th:field="*{id}" type="hidden"/>
         <div class="border border-secondary rounded p-3">
             <div class="form-group row">
                 <label class="col-sm-4 col-form-label">Name:</label>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control" th:field="*{name}" />
-                    <div class="alert alert-warning" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
+                    <input class="form-control" th:field="*{name}" type="text"/>
+                    <div class="alert alert-warning" th:errors="*{name}" th:if="${#fields.hasErrors('name')}"></div>
                 </div>
             </div>
 
@@ -35,8 +36,8 @@
             </div>
 
             <div class="text-center">
-                <input type="submit" value="Save" class="btn btn-primary m-3" />
-                <input type="button" value="Cancel" class="btn btn-secondary" id="buttonCancel" />
+                <input class="btn btn-primary m-3" type="submit" value="Save"/>
+
             </div>
 
         </div>
