--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -2,26 +2,25 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 <div th:fragment="menu">
-	<nav class="navbar navbar-expand-lg navbar-light bgcoral" >
-		<a class="navbar-brand" th:href="@{/}">
-			<img th:src="@{/images/logo.png}" width="50" height="auto" />
-		</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="topNavbar">
-			<ul class="navbar-nav">
-				
+    <nav class="navbar navbar-expand-lg navbar-light bgcoral">
+        <a class="navbar-brand" th:href="@{/}">
+            <img height="auto" th:src="@{/images/logo.png}" width="50"/>
+        </a>
+        <button class="navbar-toggler" data-target="#topNavbar" data-toggle="collapse" type="button">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="topNavbar">
+            <ul class="navbar-nav">
 
 
-				<li class="nav-item">
-					<a class="nav-link" th:href="@{/genres}">Genres</a>
-				</li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/genres}">Genres</a>
+                </li>
 
-			</ul>
-		</div>
-		
-	</nav>
+            </ul>
+        </div>
+
+    </nav>
 </div>
 </body>
 </html>
