--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -17,6 +17,10 @@
                     <a class="nav-link" th:href="@{/genres}">Genres</a>
                 </li>
 
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/users}">Users</a>
+                </li>
+
             </ul>
         </div>
 
