Show edit user form

--- a/src/main/resources/templates/user/users.html
+++ b/src/main/resources/templates/user/users.html
@@ -4,7 +4,7 @@
 <body>
 <div class="container-fluid">
     <div th:replace="navigation :: menu"></div>
-    <h2>Manage Genres</h2>
+    <h2>Manage Users</h2>
 
     <a class="fas fa-folder-plus fa-2x icon-dark mr-2" th:href="@{/users/new}"></a>
     <div class="full-details">
