--- a/src/main/resources/templates/genre/genres.html
+++ b/src/main/resources/templates/genre/genres.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments :: page_head('Genres - BookShop Admin')"/>
+<head th:replace="fragments :: page_head('List All Genres')"/>
 <body>
 <div class="container-fluid">
     <div th:replace="navigation :: menu"></div>
