--- a/src/main/resources/templates/user/user_form.html
+++ b/src/main/resources/templates/user/user_form.html
@@ -5,7 +5,7 @@
 <div class="container-fluid">
     <div th:replace="navigation :: menu"></div>
     <div>
-        <h2>Manage Genres | [[${pageTitle}]]</h2>
+        <h2>Manage Users | [[${pageTitle}]]</h2>
     </div>
 
     <form enctype="multipart/form-data" method="post" style="max-width: 500px; margin: 0 auto"
@@ -27,6 +27,21 @@
                     <input class="form-control" th:field="*{firstName}" type="text"/>
                     <div class="alert alert-warning" th:errors="*{firstName}"
                          th:if="${#fields.hasErrors('firstName')}"></div>
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label class="col-sm-4 col-form-label">Roles:</label>
+                <div class="col-sm-8">
+                    <th:block th:each="role : ${roles}">
+                        <input type="checkbox" th:field="*{roles}"
+                               th:text="${role.name}"
+                               th:value="${role.id}"
+                               class="m-2"
+                        />
+                        - <small>[[${role.description}]]</small>
+                        <br/>
+                    </th:block>
                 </div>
             </div>
 
