--- a/src/main/resources/templates/user/user_form.html
+++ b/src/main/resources/templates/user/user_form.html
@@ -34,10 +34,10 @@
                 <label class="col-sm-4 col-form-label">Roles:</label>
                 <div class="col-sm-8">
                     <th:block th:each="role : ${roles}">
-                        <input type="checkbox" th:field="*{roles}"
+                        <input class="m-2" th:field="*{roles}"
                                th:text="${role.name}"
                                th:value="${role.id}"
-                               class="m-2"
+                               type="checkbox"
                         />
                         - <small>[[${role.description}]]</small>
                         <br/>
