--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <body>
 <div th:fragment="menu">
+
     <nav class="navbar navbar-expand-lg navbar-light bgcoral">
         <a class="navbar-brand" th:href="@{/}">
             <img height="auto" th:src="@{/images/logo.png}" width="50"/>
@@ -21,6 +23,22 @@
                     <a class="nav-link" th:href="@{/users}">Users</a>
                 </li>
 
+
+
+            </ul>
+
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+
+
+                    <div sec:authorize ="isAuthenticated()">
+                        <form name="logoutForm" th:action="@{/logout}" method="post">
+                            <input type="submit" value="Logout" class="nav-link"
+                                   style="background: none; border: none;"/>
+                        </form>
+                    </div>
+
+                </li>
             </ul>
         </div>
 
