--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+<html xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      xmlns:th="http://www.thymeleaf.org"
 >
 <head th:replace="fragments :: page_head('Home - Shopme Admin')"/>
 <body>
@@ -9,8 +9,8 @@
     <div>
         <h2>Book Shop Admin Panel</h2>
         Welcome
-        <a th:href="@{/account}"
-           sec:authentication="principal.fullname"></a>
+        <a sec:authentication="principal.fullname"
+           th:href="@{/account}"></a>
         <span sec:authentication="principal.authorities"></span>
 
     </div>
