--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -4,7 +4,7 @@
 <body>
 <div th:fragment="menu">
 
-    <nav class="navbar navbar-expand-lg navbar-light bgcoral">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" th:href="@{/}">
             <img height="auto" th:src="@{/images/logo.png}" width="50"/>
         </a>
@@ -12,15 +12,17 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="topNavbar">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav nav-pills">
 
 
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/genres}">Genres</a>
+                    <a th:classappend="${#httpServletRequest.getRequestURI() == '/genres' ? 'active':''}"
+                            class="nav-link" th:href="@{/genres}">Genres</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/users}">Users</a>
+                    <a th:classappend="${#httpServletRequest.getRequestURI() == '/users' ? 'active':''}"
+                            class="nav-link" th:href="@{/users}">Users</a>
                 </li>
 
 
