--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -4,11 +4,16 @@
 <head th:replace="fragments :: page_head('Error - Book shop Admin')"/>
 </head>
 <body>
-<div class="container-fluid">
+
+
+    <body class="container-fluid" th:with="httpStatus=${T(org.springframework.http.HttpStatus).valueOf(#response.status)}">
     <div th:replace="navigation :: menu"></div>
-    <div class="m-3">
-        <h2>Sorry, an unexpected error has occurred</h2>
-    </div>
+
+    <h1 th:text="|${httpStatus} - ${httpStatus.reasonPhrase}|">404</h1>
+    <p th:utext="${errorMessage}">Error java.lang.NullPointerException</p>
+
+    <a href="index.html" th:href="@{/}">Back to Home Page</a>
+    </body>
 
     <div th:replace="fragments :: footer"></div>
 
