--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -15,12 +15,12 @@
             <ul class="navbar-nav nav-pills">
 
 
-                <li class="nav-item">
+                <li class="nav-item" sec:authorize="hasAnyAuthority('Admin', 'User')">
                     <a class="nav-link"
                        th:classappend="${#httpServletRequest.getRequestURI() == '/genres' ? 'active':''}" th:href="@{/genres}">Genres</a>
                 </li>
 
-                <li class="nav-item">
+                <li class="nav-item" sec:authorize="hasAuthority('Admin')">
                     <a class="nav-link"
                        th:classappend="${#httpServletRequest.getRequestURI() == '/users' ? 'active':''}" th:href="@{/users}">Users</a>
                 </li>
